# bayhac17

./: .gitignore  README.md  all-about-applicative.md  bayhac17.cabal
src/: FreeApplicative.hs  Main.hs
