name:                bayhac17
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/adelbertc/bayhac17
license:             Apache 2.0
license-file:        LICENSE
author:              Adelbert Chang
maintainer:          Adelbert Chang
copyright:           2017 Adelbert Chang
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

executable bayhac17
  hs-source-dirs:      src
  main-is:             Main.hs
  other-modules:       FreeApplicative
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -Wall
  default-extensions:  NoImplicitPrelude
  build-depends:       base >= 4.9 && < 5
                     , containers >= 0.5 && < 0.6
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/bayhac17
